# banshee

./: configure.ac
src/Extensions/: Makefile.am
src/Extensions/Banshee.Rygel/: Banshee.Rygel.addin.xml  Banshee.Rygel.csproj  Makefile.am
src/Extensions/Banshee.Rygel/Banshee.Rygel/: BansheeMediaItem.cs  CollectionIndexer.cs  IRygelInterfaces2.cs  MediaContainer.cs  MediaItem.cs  MediaObject.cs  RootContainer.cs  RygelService.cs  TrackInfo.cs
