ASSEMBLY = Banshee.Rygel
TARGET = library
LINK = $(REF_EXTENSION_RYGEL)
INSTALL_DIR = $(EXTENSIONS_INSTALL_DIR)

SOURCES =  \
  Banshee.Rygel/IRygelInterfaces2.cs \
	Banshee.Rygel/MediaContainer.cs \
	Banshee.Rygel/MediaItem.cs \
	Banshee.Rygel/MediaObject.cs \
	Banshee.Rygel/RygelService.cs

RESOURCES = Banshee.Rygel.addin.xml

include $(top_srcdir)/build/build.mk

