ASSEMBLY = Banshee.Rygel
TARGET = library
LINK = $(REF_EXTENSION_RYGEL)
INSTALL_DIR = $(EXTENSIONS_INSTALL_DIR)

SOURCES =  \
	Banshee.Rygel/CollectionIndexer.cs \
  Banshee.Rygel/IRygelInterfaces2.cs \
	Banshee.Rygel/MediaContainer.cs \
	Banshee.Rygel/MediaItem.cs \
	Banshee.Rygel/MediaObject.cs \
	Banshee.Rygel/RootContainer.cs \
	Banshee.Rygel/RygelService.cs \
	Banshee.Rygel/TrackInfo.cs

RESOURCES = Banshee.Rygel.addin.xml

include $(top_srcdir)/build/build.mk

